# mtinfo

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  README.md.old  vgcore.123855
include/mtinfo/: errors.hh  mtinfo.h  mtinfo.hh  terminfo.hh  terminfo_constants.hh
include/mtinfo/terminfo/: constants.hh  ctinfo_parser.hh  ctinfo_parser_util.hh  parser.hh  parser_util.hh  terminfo.hh  terminfo_constants.hh  util.hh
spec/: README.md  README.md.old
src/: cwrapper.cc  terminfo.cc  terminfo_parser.cc  terminfo_parser.hh  terminfo_utils.cc  terminfo_utils.hh  util.hh  valgrind.txt  version.hh.in
src/examples/: CMakeLists.txt
src/terminfo/: ctinfo_parser.cc  parser.cc
test/: all.terminfo  build.sh  ext-bool.terminfo  ext-str.terminfo  extended.terminfo  first-bool.terminfo  first-num.terminfo  first-str.terminfo  firsts.terminfo  infocmp.sh  last-str.terminfo  test.terminfo
test/old/: empty-terminfo  extended-terminfo  generate-terminfo.py  infocmp.txt  test copy.py  test-term.src  test-terminfo  test.py  understanding_ext_terminfo
test/old/e/: empty
test/old/e/e/: empty  extended  extended-bak
test/old/t/: test
test/output/a/: all
test/output/e/: extended  extended-bool  extended-number  extended-string
test/output/f/: first-bool  first-num  first-number  first-string  firsts
test/output/l/: last-bool  last-number  last-string
test/output/n/: name-and-description  name-only
test/output/t/: test  test3
test/output/w/: with-alias  with-description
tests/: CMakeLists.txt  demo.cc  generate-terminfo.cc  public_api.cc
tests/test-files-todo/: ext-num.terminfo  ext-str-two.terminfo  firsts-n-extended-dd.terminfo  firsts-n-extended.terminfo  last-bool.terminfo  last-num.terminfo  name-only.terminfo  test-tput.sh  test3.terminfo  with-alias.terminfo  with-desc.terminfo
